Update to correct comm and support distortions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,9 @@
     border-bottom: 1px solid #3a3a3a;
 }
 
-#menu li a.active {
+/* Style for menu which indicates the page a user is on */
+#menu li a.active,
+#menu li a:active {
     border-bottom: 2px solid #3a3a3a;
 }
 
